# scrapl

./: .gitignore  README.md  environment.yml  pyproject.toml
scrapl/: utils.py
scrapl/bet/: game.py  scraper.py
scrapl/fpl/: base.py  fixtures.py  gameweek.py  general.py  player.py  return_schema.py  runner.py  scraper.py
tests/: __init__.py  conftest.py
tests/fpl/: test_scraper.py
